docs-archive/apache-airflow-providers-common-ai/0.6.0/_sources/_api/airflow/providers/common/ai/operators/llm_schema_compare/index.rst.txt
airflow.providers.common.ai.operators.llm_schema_compare
========================================================

.. py:module:: airflow.providers.common.ai.operators.llm_schema_compare

.. autoapi-nested-parse::

   Operator for cross-system schema drift detection powered by LLM reasoning.



Attributes
----------

.. autoapisummary::

   airflow.providers.common.ai.operators.llm_schema_compare.DEFAULT_SYSTEM_PROMPT


Classes
-------

.. autoapisummary::

   airflow.providers.common.ai.operators.llm_schema_compare.SchemaMismatch
   airflow.providers.common.ai.operators.llm_schema_compare.SchemaCompareResult
   airflow.providers.common.ai.operators.llm_schema_compare.LLMSchemaCompareOperator


Module Contents
---------------

.. py:class:: SchemaMismatch(/, **data)

   Bases: :py:obj:`pydantic.BaseModel`


   A single schema mismatch between data sources.


   .. py:attribute:: source
      :type:  str
      :value: None



   .. py:attribute:: target
      :type:  str
      :value: None



   .. py:attribute:: column
      :type:  str
      :value: None



   .. py:attribute:: source_type
      :type:  str
      :value: None



   .. py:attribute:: target_type
      :type:  str
      :value: None



   .. py:attribute:: severity
      :type:  Literal['critical', 'warning', 'info']
      :value: None



   .. py:attribute:: description
      :type:  str
      :value: None



   .. py:attribute:: suggested_action
      :type:  str
      :value: None



   .. py:attribute:: migration_query
      :type:  str
      :value: None



.. py:class:: SchemaCompareResult(/, **data)

   Bases: :py:obj:`pydantic.BaseModel`


   Structured output from schema comparison.


   .. py:attribute:: compatible
      :type:  bool
      :value: None



   .. py:attribute:: mismatches
      :type:  list[SchemaMismatch]
      :value: None



   .. py:attribute:: summary
      :type:  str
      :value: None



.. py:data:: DEFAULT_SYSTEM_PROMPT
   :value: Multiline-String

   .. raw:: html

      <details><summary>Show Value</summary>

   .. code-block:: python

      """Consider cross-system type equivalences:
      - varchar(n) / text / string / TEXT may be compatible
      - int / integer / int4 / INT32 are equivalent
      - bigint / int8 / int64 / BIGINT are equivalent
      - timestamp / timestamptz / TIMESTAMP_NTZ / datetime may differ in timezone handling
      - numeric(p,s) / decimal(p,s) / NUMBER — check precision and scale
      - boolean / bool / BOOLEAN / tinyint(1) — check semantic equivalence
      
      Severity levels:
      - critical: Will cause data loading failures or data loss (e.g., column missing in target, incompatible types)
      - warning: May cause data quality issues (e.g., precision loss, timezone mismatch)
      - info: Cosmetic differences that won't affect data loading (e.g., varchar length differences within safe range)
      
      """

   .. raw:: html

      </details>



.. py:class:: LLMSchemaCompareOperator(*, data_sources = None, db_conn_ids = None, table_names = None, context_strategy = 'full', system_prompt = DEFAULT_SYSTEM_PROMPT, **kwargs)

   Bases: :py:obj:`airflow.providers.common.ai.operators.llm.LLMOperator`


   Compare schemas across different database systems and detect drift using LLM reasoning.

   The LLM handles complex cross-system type mapping that simple equality checks
   miss (e.g., ``varchar(255)`` vs ``string``, ``timestamp`` vs ``timestamptz``).

   Accepts data sources via two patterns:

   1. **data_sources** — a list of
      :class:`~airflow.providers.common.sql.config.DataSourceConfig` for each
      system. If the connection resolves to a
      :class:`~airflow.providers.common.sql.hooks.sql.DbApiHook`, schema is
      introspected via SQLAlchemy; otherwise DataFusion is used.
   2. **db_conn_ids + table_names** — shorthand for comparing the same table
      across multiple database connections (all must resolve to ``DbApiHook``).

   :param prompt: Instructions for the LLM on what to compare and flag.
   :param llm_conn_id: Connection ID for the LLM provider.
   :param model_id: Model identifier (e.g. ``"openai:gpt-5"``).
   :param system_prompt: Instructions included in the LLM system prompt. Defaults to
       ``DEFAULT_SYSTEM_PROMPT`` which contains cross-system type equivalences and
       severity definitions. Passing a value **replaces** the default system prompt
   :param agent_params: Extra keyword arguments for the pydantic-ai ``Agent``.
   :param data_sources: List of DataSourceConfig objects, one per system.
   :param db_conn_ids: Connection IDs for databases to compare (used with
       ``table_names``).
   :param table_names: Tables to introspect from each ``db_conn_id``.
   :param context_strategy: ``"basic"`` for column names and types only;
       ``"full"`` to include primary keys, foreign keys, and indexes.
       Default ``"full"``.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('prompt', 'llm_conn_id', 'model_id', 'system_prompt', 'agent_params', 'data_sources',...



   .. py:attribute:: data_sources
      :value: []



   .. py:attribute:: db_conn_ids
      :value: []



   .. py:attribute:: table_names
      :value: []



   .. py:attribute:: context_strategy
      :value: 'full'



   .. py:attribute:: system_prompt
      :value: Multiline-String

      .. raw:: html

         <details><summary>Show Value</summary>

      .. code-block:: python

         """Consider cross-system type equivalences:
         - varchar(n) / text / string / TEXT may be compatible
         - int / integer / int4 / INT32 are equivalent
         - bigint / int8 / int64 / BIGINT are equivalent
         - timestamp / timestamptz / TIMESTAMP_NTZ / datetime may differ in timezone handling
         - numeric(p,s) / decimal(p,s) / NUMBER — check precision and scale
         - boolean / bool / BOOLEAN / tinyint(1) — check semantic equivalence
         
         Severity levels:
         - critical: Will cause data loading failures or data loss (e.g., column missing in target, incompatible types)
         - warning: May cause data quality issues (e.g., precision loss, timezone mismatch)
         - info: Cosmetic differences that won't affect data loading (e.g., varchar length differences within safe range)
         
         """

      .. raw:: html

         </details>




   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



